--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -18,7 +18,7 @@
   </form>
   <ul id="messageList">
     <% messages.forEach((msg) => { %>
-      <li><%= `${msg.timestamp} - ${msg.nickname}: ${msg.message}` %></li>
+      <li data-testid='message' ><%= `${msg.timestamp} - ${msg.nickname}: ${msg.message}` %></li>
     <% }) %>
   </ul>
   <form>
