Client generates random nickname as user connects

--- a/views/test-client.ejs
+++ b/views/test-client.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h2>Send messages</h2>
+  <p>Nickname: <span id="nickname" data-testid="online-user"><%= randomNickname %></span></p>
   <form id="message-form" action="">
     <input id="message-input" type="text">
     <input type="submit">
