--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,51 +1,38 @@
 * {
+  box-sizing: content-box;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: 0;
-          box-sizing: 0;
 }
 
 .main {
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  height: 100vh;
+  width: 100%;
 }
 
 .main .side-bar {
-  width: 300px;
-  height: 100%;
-  z-index: 10;
   background: #f3ffee;
-  -webkit-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 0 2px rgba(0, 0, 0, 0.25);
+  height: 100%;
+  width: 300px;
+  z-index: 10;
 }
 
 .main .chat-container {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .main .chat-container .chat-messages {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   width: 100%;
 }
 
 .main .chat-container .chat-message-form {
-  width: 100%;
-  height: 100px;
   background: #fff;
-  -webkit-box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: -2px 0 2px rgba(0, 0, 0, 0.25);
+  height: 100px;
+  width: 100%;
 }
-/*# sourceMappingURL=index.css.map */
