Messages are rendered on the screen

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
   <h2>Send messages</h2>
   <p>Nickname: <span id="nickname" data-testid="online-user"><%= randomNickname %></span></p>
+  <ul id="messages-list"></ul>
   <form id="message-form" action="">
     <input id="message-input" type="text" data-testid="message-box">
     <button type="submit" data-testid="send-button">Send</button>
