--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,7 +31,7 @@
 }
 
 .main .chat-container .chat-message-form {
-  background: #fff;
+  background: white;
   box-shadow: -2px 0 2px rgba(0, 0, 0, 0.25);
   height: 100px;
   width: 100%;
