--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,7 +10,16 @@
   </head>
   <body class="main">
     <script>
-      const socket= io();
+      
+
+      const sendMessage = () => {
+        const message = document.querySelector('#message-box').value;
+        socket.emit('webchat', message);
+        document.querySelector('#message-box').value = '';
+      };
+
+
+      const socket = io();
 
       socket.on('webchat', (message) => {
         const li = document.createElement('li');
@@ -39,16 +48,12 @@
         </div>
         <div class="users">
           <h3>Usuários Online</h3>
-          </ul>
-           
-          </ul>
+          </ul id="online-users"></ul>
         </div>
       </div>
       <div class="messages-container">
         <div class="messages">
-
           <ul id="messages"></ul>
-
         </div>
       </div>
       <div class="type-message-container">
@@ -65,6 +70,7 @@
             id="send-button"
             data-testid="send-button"
             type="submit"
+            onclick="sendMessage()"
           >
             Send Message
           </button>
