--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='http://localhost:5000/socket.io/socket.io.js'></script>
-  <title>Document</title>
+  <title>WebChat</title>
 </head>
 <body>
   <h1>WebChat</h1>
-  <script>
-    const socket = io('http://localhost:5000');
-  </script>
+  <input 
+    type="text" 
+    placeholder="Insira seu nickname"
+    data-testid="nickname-box"
+  >
+  <button 
+    type="submit"
+    data-testid="nickname-button"
+  >Salvar</button>
+  <ul id="usersOnline"></ul>
+  <ul id="messages"></ul>
+  <input 
+    type="text" 
+    placeholder="Digite sua mensagem aqui"
+    data-testid="message-box"
+  >
+  <button 
+    type="submit"
+    data-testid="send-button"
+  >Enviar</button>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="./client.js"></script>
 </body>
 </html>
