--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="/socket.io/socket.io.js"></script>
   <link href="styles/styles.css" rel="stylesheet" />
-  <title>Document</title>
+  <title>tryChat</title>
 </head>
 <body>
   <main class="container">
