--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -19,7 +19,11 @@
       <input type="text" placeholder="Insira seu nickname" data-testid="nickname-box" class="webchat_nickname__input webchat__input"/>
       <button type="button" data-testid="nickname-button" class="webchat_nickname__button webchat__button">Salvar</button>
       <ul data-testid="online-user" class="webchat_user__box webchat_box"></ul>
-      <ul data-testid="message" class="webchat__message__box webchat_box"></ul>
+      <ul data-testid="message" class="webchat__message__box webchat_box">
+        <% messages.forEach(({ message, nickname, timestamp }) => { %>
+          <li><%= `${timestamp} - ${nickname}: ${message}` %></li>
+        <% }) %>
+      </ul>
       <input type="text" placeholder="Digite uma nova mensagem aqui" data-testid="message-box" class="webchat__message__input webchat__input"/>
       <button type="button" data-testid="send-button" class="webchat__message__buttonn webchat__button">Enviar</button>
     </div>
