feat: req 3 implementado e req 2 quase passando

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -25,7 +25,7 @@
             placeholder="Digite seu nickname"
             autocomplete="off"
           />
-          <button data-testid="nickname-button">
+          <button data-testid="nickname-button" class="nickname-btn">
             Salvar nickname
           </button>
         </form>
