--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,11 @@
       </div>
       <div class="messages">
         <ul id="msgs">
+          <% if (messages) { %>
+             <% messages.forEach((m) => { %>
+               <li data-testid="message"><%= `${m.timestamp} - ${m.nickname}: ${m.message}` %></li>
+             <% }) %>
+          <% } %>
         </ul>
       </div>
     </div>
@@ -61,7 +66,7 @@
       createMsgList(message);
     });
 
-    socket.on('updateOlineList', async (users) => {
+    socket.on('updateOnlineList', async (users) => {
       usersOnline = users;
       userUl.innerHTML = '';
       const client = users[socket.id];
