--- a/views/webchat.html
+++ b/views/webchat.html
@@ -7,27 +7,36 @@
 </head>
 <body>
   <h1>WebChat</h1>
-  <input 
-    type="text" 
+  <input
+    type="text"
     placeholder="Insira seu nickname"
     data-testid="nickname-box"
+    id="nicknameBox"
   >
   <button 
     type="submit"
     data-testid="nickname-button"
-  >Salvar</button>
-  <ul id="usersOnline"></ul>
-  <ul id="messages"></ul>
-  <input 
-    type="text" 
-    placeholder="Digite sua mensagem aqui"
+    id="nicknameButton"
+  >
+    Salvar
+  </button>
+  <ul id="userList"></ul>
+  <ul id="message"></ul>
+  <input
+    type="text"
+    placeholder="Digite uma nova mensagem aqui"
     data-testid="message-box"
+    id="messageBox"
   >
   <button 
     type="submit"
     data-testid="send-button"
-  >Enviar</button>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="./client.js"></script>
+    id="sendButton"
+  >
+    Enviar
+  </button>
+
 </body>
+<script src="/socket.io/socket.io.js"></script>
+<script src='../assets/client.js'></script>
 </html>
