feat(Req 3) - :sparkle: Requisito 3 feito

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -22,7 +22,11 @@
       <ul></ul>
     </div>
     <div class="chat">
-      <ul class="messages"></ul>
+      <ul class="messages">
+        <% messages.forEach(m => { %>
+          <li data-testid="message"><%= `${m.timestamp} - ${m.nickname}: ${m.message}`%></li>
+        <% }) %>
+      </ul>
     </div>
     <footer>
       <form action="">
