feat: include form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='./socket.io/socket.io.js'></script>
+  <script src='./socket.io/socket.io.js' defer></script>
+  <script type="module" defer>window.socket = io();</script>
   <title>MSN</title>
 </head>
 <body>
-  <script>
-    io()
-  </script>
+  <%- include('formToMessage') -%>
 </body>
 </html>
