--- a/public/views/webChat.ejs
+++ b/public/views/webChat.ejs
@@ -22,7 +22,10 @@
         </button>
       </div>
     </fieldset>
-    <ul class="messages" id="messages"></ul>
+    <aside className="container-users">
+      <ul id="online-users">OnLine Users</ul>
+      <ul class="messages" id="messages"></ul>
+    </aside>
     <form class="form" id="form" action="">
       <input
         class="input"
