fix: add missing data-test-id's

--- a/views/formToMessage.ejs
+++ b/views/formToMessage.ejs
@@ -1,8 +1,8 @@
 <h1 id="user" data-testid="online-user"></h1>
 <form>
-  <input type="text">
-  <input type="text">
-  <button type="submit">Enviar</button>
+  <input type="text" data-testid="nickname-box">
+  <input type="text" data-testid="message-box">
+  <button type="submit" data-testid="send-button">Enviar</button>
 </form>
 
 <script src="./scripts/views/formToMessage.js" defer></script>
